# sharly-chess

./: .env.example  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.md  README.md  RELEASE_NOTES.md  TAG_MESSAGE-3.1.txt  TAG_MESSAGE.txt  conftest.py  download_federation_flags.py  export.py  i18n.py  i18n_requirements.txt  polyglot.patch  pyproject.toml  pytest.ini  requirements-flatpak.txt  requirements.txt  setup.py  sharly-chess.flatpakrepo
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: -en--bug-report.md  -fr--rapport-de-bug.md
.github/workflows/: build-test-with-init.yml  export-sign.yml  export.yml  ffe_database.yml  flatpak-test.yml  full_tests.yml  i18n_update.yml  linux-flatpak-arm64.yml  linux-flatpak.yml  publish-multiarch.yml  sync-upstream.yml  test.yml
chessevent/: action_selector.py
common/: papi_web_config.py
data/: event.py  tournament.py
database/: sqlite.py  store.py
database/sql/: create_event.sql
docs/: 01-summary.md  02-roadmap.md  03-change-log.md  04-contributors.md  05-install.md  05-users.md  06-use.md  11-friendly.md  12-qualified.md  13-multi-tournaments.md  21-update.md  22-pairings-by-board.md  23-pairings-by-player.md  24-last-results.md  25-check-in.md  31-timer.md  32-handicap.md  33-menus.md  34-templates-families.md  35-rotators.md  36-css.md  37-chessevent.md  38-illegal_moves.md  50-faq-system.md  50-faq-timer.md  50-faq-web.md  50-faq.md  80-technical-annexes.md  81-urls.md  82-chessevent.md  83-dev-setup.md  84-export.md  85-database.md  86-i18n-models.md  86-i18n.md  90-sandbox.md  92-pairing-engines.md  93-communication.md  95-auth.md  96-shortcuts.md  (+11 more)
docs/contributing/: contributing-guide.md  contributors.md  i18n.md  translating-guide.md  translation-guide.md
docs/linux/: developer-guide.md  infrastructure.md  install.md
docs/sandbox/: authentication-and-roles-2.md  authentication-and-roles.md  communication-to-players.md  delegation.md  pairing-actions.md
docs/technical-appendices/: CI_CD_BUILD_INTEGRATION_SUMMARY.md  SETUP_BUILD_ON_CHESS2.md  access-levels-actions.md  access-levels-permissions.md  chessevent-interfacing.md  databases.md  detailed-roadmap.md  dev-setup.md  fide-endorsement.md  fide-title-norms.md  files.md  freetds-export.md  i18n-models.md  i18n.md  macos-signing-setup.md  network.md  pairings-checker.md
docs/tie-breaks/: Tiebreak_exercises-PL-2026.pptm
example_events/: 35-tc.sce  avoine-2024.sce  bre-jeunes-2024.sce  domloup-fide-37.sce  domloup-fide-40.sce  domloup-rapide-2025.sce  france-rapide-2023.sce  handicap.sce  liffre-2024.sce  minimal.sce
example_events/yml/: 35-tc.yml  avoine-2024.yml  bre-jeunes-2024.yml  domloup-fide-37.yml  france-rapide-2023.yml  handicap.yml  liffre-2024.yml  test-event.yml
examples/events/: 35-tc-2025.sce  Allauch_25.sce  bre-jeunes-2024.sce  championnat_35_toutes_categories_2026.sce  championnat_scolaire-4-3.4.7-m069.sce  championnat_scolaire_35_college_2026.sce  domloup-fide-37.db  domloup_fide_41.sce  france-rapide-2023-2.8.8-m035.sce  france-rapide-2023.db  handicap-2.8.8-m035.sce  handicap.sce  liffre-2024-2.4.0.db  liffre-2024-2.8.8-m035.sce  liffre-2025.sce  minimal-2.8.8-m035.sce  schools-test.sce  u8_-_25-3.2.0-m055.sce
export-data/: COPYRIGHT.txt
export-data/papi/: README.txt
ffe/: action_selector.py  ffe_session.py
flatpak/backup_python_3-12/: launcher.py
flatpak/ci-cd/: flatpak-build.yml
flatpak/configuration/: INSTALL.md  com.sharlychess.SharlyChess.appdata.xml  com.sharlychess.SharlyChess.desktop  com.sharlychess.SharlyChess.json
flatpak/documentation/: 01-ANALYSE_REPOSITORY.md  02-ANALYSE_FLATPAK_FEASIBILITY.md  03-MIGRATION_GUIDE.md  04-FLATPAK_PERMISSIONS.md  05-NETWORK_CONFIGURATION.md  06-FILE_STORAGE.md  10-LOCAL_BUILD_AND_TEST.md  CORRECTIONS_SUMMARY.md  CRITICAL_3_REQUIREMENTS.md  DEVELOPER_GUIDE.md  FLATHUB_PUBLISHING.md  FLATPAK_CI_CD_BUILD_INTEGRATION_SUMMARY.md  FLATPAK_PROJECT_STATUS.md  FLATPAK_USER_GUIDE.md  INDEX.md  INFRASTRUCTURE.md  INSTALL.md  INSTALL_FLATPAK.md  README.md  SELF_HOSTED_PUBLISHING.md  SETUP_FLATPAK_CI_CD_PIPELINE.md
flatpak/scripts/: build_and_test.py  flatpak_patches.py  generate_notice.py  launcher.py  test_post_build.py  validate.py
flatpak/testing/: functional_tests.py
locale/: babel.cfg  messages.pot
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/summaries/: 044b2467f68d0f2c3dde887392b2c125d9a3372c83ad0f9b0010472ac1c44473-1dde11243eb394ebafba1bd33526111c31993f13f68c81aff975c16152bd19db.delta  04b3b9d3464a061feee91c281531a6a82aaa91061b5e701c5ca1371abb796e95-5523c98986d07322985ceeab27aa5507040406d6124cd7938987f48a0eeee220.delta  05e123c68eed2564d101a337e9c319e5e67989fc8aab318ab3c4f6efc4349d9e-8654df1ab07b569a012e7b5e85b8c407ec8bd56b8cecbdd91f5bc02f967b5629.delta  0c4c065e18757b7df300eaa44571ead10ad973d103fc83ca6d5e1eaa05afa07d-12519e98bd12c9e740eeffcff3ace138041944f38b308745385ea9cb208d998d.delta  0c4c065e18757b7df300eaa44571ead10ad973d103fc83ca6d5e1eaa05afa07d-f29a98c0d98f824270809ee5580363d4d5a1fca96137b133feff7ef4d4f7d9b8.delta  17826d0e05a2c442e6e415d5fb164c3480ba18c57d83f91990441346d7a7e9c4-78c85c36aa2511f77fd5e13df607c9d807cdda750e2012c4a85ef90d35cf3234.delta  182e9420ed99721df95bbc07d2c38d3dd06194f11af492315b402b08af4d28f7-17bd765ef6c771057e2b187c348f0c713ae93b24d13049d4b5af7c850e41c365.delta  182e9420ed99721df95bbc07d2c38d3dd06194f11af492315b402b08af4d28f7-b29afa52a3f918c1d2ef58967b97f5e67ec5e6494705d25d2170b38222d09ac8.delta  18f387469427aa8a34e643c3197f8f433016205c7d731c0c7819ed23c8b03e22-4f99b49d55d6f19284a32c23ca3b8902dd90c04add9a3bf098c0f2a6e1bfb0ed.delta  (+135 more)
resources/favicon/: README.md
scripts/: rebuild_production_repo.sh  sync_desktop_version.py
scripts/access_levels/: generate_access_levels_doc.py
src/: antivirus.py  papi_web.py  sharly_chess.py  sharly_chess_uac.py
src/data/: menu.py  (+36 more)
tests/: README.md  test_config.py  test_pairings.py  test_prizes.py  test_tiebreaks.py
utils/: babel.cfg  download_federation_flags.py  export.py  i18n_update.py
(+2070 files in other folders)
