[build-system]
requires = ["setuptools >= 75.5.0", "requests ~= 2.32.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sharly-chess"
description = "An application to help chess arbiters and organizers manage their tournaments"
requires-python = ">=3.12.0"
version = "2.8.1"

authors = [
  { name = "Pascal Aubry", email = "support@sharly-chess.com" },
  { name = "Sammy Plat", email = "support@sharly-chess.com" },
  { name = "Timothy Armes", email = "support@sharly-chess.com" },
  { name = "Youri Aubry", email = "support@sharly-chess.com" },
]
license = { text = "AGPL v3.0" }
readme = "README.md"
dependencies = [
  "AdvancedHTMLParser ~= 9.0.2",
  "XlsxWriter ~= 3.2.2",
  "aioodbc ~= 0.5.0",
  "apluggy ~= 1.1.0",
  "babel ~= 2.16.0",
  "chardet ~= 5.2.0",
  "colorama ~= 0.4.6",
  "colorlog ~= 6.9.0",
  "cryptography ~= 44.0.0",
  "httpdate ~= 1.2.0",
  "iso4217parse ~= 0.6.2",
  "Jinja2 ~= 3.1.5",
  "litestar ~= 2.14.0",
  # downgrading pefile from 2024.8.26 to 2023.2.7, cf https://github.com/pyinstaller/pyinstaller/issues/8762
  "pefile == 2023.2.7",
  "phonenumbers ~= 8.13.52",
  "pluggy ~= 1.5.0",
  "pycountry ~= 24.6.1",
  "pyexcel-ods3 ~= 0.6.1",
  "pyodbc ~= 5.2.0",
  "pywin32-ctypes ~= 0.2.3",
  "qrcode[pil] ~= 7.4.2",
  "requests ~= 2.32.3",
  "trf @ https://github.com/sharly-chess/TRF/archive/refs/tags/v1.1.3-unofficial.zip",
  "uvicorn ~= 0.34.0",
  "validators ~= 0.34.0",
  "wheel >= 0.45.1",
]

[project.optional-dependencies]
lint = ["ruff", "validate-pyproject", "pipdeptree", "mypy", "pre-commit"]

translate = ["transformers", "torch", "sentencepiece", "sacremoses"]

export = ["PyInstaller"]

tests = ["pytest"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
check_untyped_defs = true
disable_error_code = ["import-untyped", "no-redef"]
