[build-system]
requires = ["setuptools >= 75.5.0", "requests ~= 2.32.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sharly-chess"
description = "An application to help chess arbiters and organizers manage their tournaments"
requires-python = ">=3.13.0"
version = "4.2.3"

authors = [
  { name = "Pascal Aubry", email = "support@sharly-chess.com" },
  { name = "Sammy Plat", email = "support@sharly-chess.com" },
  { name = "Timothy Armes", email = "support@sharly-chess.com" },
  { name = "Youri Aubry", email = "support@sharly-chess.com" },
]
license = { text = "AGPL v3.0" }
readme = "README.md"
dependencies = [
  "AdvancedHTMLParser ~= 9.0.2",
  "aiosqlite ~= 0.21.0",
  "aiosqlitepool ~= 1.0.0",
  "XlsxWriter ~= 3.2.2",
  "apluggy ~= 1.1.0",
  # Latest compatible version should always be preferred due to security reasons
  # This can be pinned later due to security concerns
  "argon2-cffi",
  "babel ~= 2.16.0",
  "chardet ~= 5.2.0",
  "colorama ~= 0.4.6",
  "colorlog ~= 6.9.0",
  "cryptography ~= 44.0.0",
  "httpdate ~= 1.2.0",
  "iso4217parse ~= 0.6.2",
  "Jinja2 ~= 3.1.5",
  "litestar ~= 2.16.0",
  "packaging ~= 26.0",
  "pathvalidate ~= 3.3.1",
    # downgrading pefile from 2024.8.26 to 2023.2.7, cf https://github.com/pyinstaller/pyinstaller/issues/8762
  "pefile == 2023.2.7",
  "pluggy ~= 1.5.0",
  "psutil ~= 7.0.0",
  "pycountry ~= 24.6.1",
  "pyexcel-ods3 ~= 0.6.1",
  "python-tds ~= 1.16.0",
  "python-dotenv ~= 1.1.1",
  "qrcode[pil] ~= 7.4.2",
  "requests ~= 2.32.3",
  "rubicon-objc ~= 0.5.2",
  "sniffio ~= 1.3.1",
  "text_unidecode ~= 1.3",
  "toml ~= 0.10.2",
  "uvicorn ~= 0.34.0",
  "validators ~= 0.34.0",
  "toga ~= 0.5.4",
  "wheel >= 0.45.1",
  "wsproto ~= 1.2.0",
]

[project.optional-dependencies]
lint = [
  "ruff ~= 0.15.0",
  "validate-pyproject",
  "pipdeptree",
  "mypy >= 1.20.0",
  "pre-commit",
]

translate = ["transformers", "torch", "sentencepiece", "sacremoses"]

export = ["PyInstaller ~= 6.15.0", "pip-licenses"]

tests = ["pytest", "pytest-playwright", "pytest-asyncio", "pytest-base-url"]

scripts = ["scour ~= 0.38.2"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
check_untyped_defs = true
disable_error_code = ["import-untyped", "no-redef"]
